made some changed
